Add dynamically loaded core2.compute.simd namespace - no implementation yet.