@@ -46,6 +46,9 @@
              "-XX:MaxDirectMemorySize=2G"
              "-Dio.netty.tryReflectionSetAccessible=true"
              "-Darrow.enable_null_check_for_get=false"
+             "--illegal-access=warn" ;; needed on JDK16 to allow Netty/Arrow access DirectBuffer internals
+             #_"--add-modules=jdk.incubator.vector" ;; doesn't work if it doesn't exist, like on JDK11.
+             "--add-modules=ALL-SYSTEM" ;; enables all incubator modules instead
              #_"-Darrow.enable_unsafe_memory_access=true"]
 
   :global-vars {*warn-on-reflection* true})
